fix: a lot of bugs has been removed
